<resources>
    <string name="app_name">DialogUtil</string>

    <string name="show_double_text_dialog">显示双选择对话框</string>
    <string name="show_single_text_dialog">显示单选择对话框</string>
    <string name="show_list_selector_dialog">显示底部list view选择对话框</string>
    <string name="show_bottom_list_view_dialog">显示底部list view选择对话框</string>
    <string name="show_bottom_grid_view_dialog">显示底部grid view选择对话框</string>


    <string name="cancel">取消</string>
    <string name="commit">确定</string>
    <string name="warm_prompt">温馨提示</string>
    prompt
</resources>
