<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_double_text_dialog"
        android:text="@string/show_double_text_dialog"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_single_text_dialog"
        android:text="@string/show_single_text_dialog"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_list_selector_dialog"
        android:text="@string/show_list_selector_dialog"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_bottom_listview_dialog"
        android:text="@string/show_bottom_list_view_dialog"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btn_bottom_gridview_dialog"
        android:text="@string/show_bottom_grid_view_dialog"
        android:layout_height="wrap_content" />

</LinearLayout>
